# arm_0

./: .gitignore  .mxproject  CMakeLists.txt  README.md  arm_test_a.ioc  launch.sh  package.xml  project.pmp
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: can.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
Core/expand/: arm.c  arm.h
Core/robot_generic/: bus_detect.c  bus_detect.h  chassis.c  chassis.h  gimbal.c  gimbal.h  linear_motion.c  linear_motion.h  pid_parameters.c  pid_parameters.h  power_ctrl.c  power_ctrl.h  robot.c  robot.h  shoot.c  shoot.h  vision.c  vision.h
MDK-ARM/: arm_test_a.uvguix.3229629598  arm_test_a.uvoptx  arm_test_a.uvprojx  startup_stm32f427xx.lst
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
launch/: display.launch  gazebo.launch
meshes/: base_link.STL
src/arm_0/: CMakeLists.txt  README.md  package.xml
src/arm_0_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bringup/: CMakeLists.txt  package.xml
src/data_process/: CMakeLists.txt  package.xml
src/description/: CMakeLists.txt  package.xml
src/engineer2023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_action/: CMakeLists.txt  package.xml
src/moveit_ctrl/: CMakeLists.txt  package.xml
src/serial_cpp/: CMakeLists.txt  package.xml
src/serial_cpp/config/: serial_config.yaml
src/serial_cpp/include/serial_cpp/: serial_cpp.hpp  serial_driver.hpp  serial_port.hpp
src/serial_cpp/launch/: serial_cpp.launch.py
src/serial_cpp/src/: serial_cpp.cpp  serial_driver.cpp  serial_port.cpp
urdf/: arm_0.urdf
(+103 files in other folders)
